--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -9,52 +9,22 @@
   src: url('/fonts/PretendardVariable.ttf') format('truetype-variations');
 }
 
-/* 
-  기본 weight 별칭 (필요한 경우 사용)
-  Variable 폰트는 위의 설정만으로도 모든 weight를 지원합니다.
-  
-  추가 파일이 있는 경우 아래 예시를 참고하세요:
-  
-  @font-face {
-    font-family: 'Pretendard';
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-    src: url('/fonts/Pretendard-Regular.woff2') format('woff2'),
-         url('/fonts/Pretendard-Regular.woff') format('woff');
-  }
-  
-  @font-face {
-    font-family: 'Pretendard';
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-    src: url('/fonts/Pretendard-Medium.woff2') format('woff2'),
-         url('/fonts/Pretendard-Medium.woff') format('woff');
-  }
-  
-  @font-face {
-    font-family: 'Pretendard';
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-    src: url('/fonts/Pretendard-SemiBold.woff2') format('woff2'),
-         url('/fonts/Pretendard-SemiBold.woff') format('woff');
-  }
-  
-  @font-face {
-    font-family: 'Pretendard';
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-    src: url('/fonts/Pretendard-Bold.woff2') format('woff2'),
-         url('/fonts/Pretendard-Bold.woff') format('woff');
-  }
-*/
+@font-face {
+  font-family: "Tenada";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Tenada.woff2")
+    format("woff2");
+  font-weight: 100 900;
+  font-style: normal;
+}
+
 
 /* 유틸리티 클래스 */
 .font-custom {
   font-family: var(--font-custom);
+}
+
+.font-Tenada {
+  font-family: 'Tenada', var(--font-custom);
 }
 
 /* 폰트 최적화 */
